--- a/html/index.html
+++ b/html/index.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Tappecue Panel for CC</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/style.css">
-  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-  <script>if (typeof exports === 'object') {window.exports = exports; exports = undefined;}</script>
-  <script src="../lib/jquery-3.2.1.min.js"></script>
-  <script src="../lib/bootstrap.min.js"></script>
-  <script src="../lib/CSInterface.js"></script>
-  <script src="../lib/main.js"></script>
-  <title>Tappecue</title>
+<title>Tappecue Panel for CC</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+<script>if (typeof exports === 'object') {window.exports = exports; exports = undefined;}</script>
+<script src="../lib/jquery-3.2.1.min.js"></script>
+<script src="../lib/bootstrap.min.js"></script>
+<script src="../lib/CEPEngine_extensions.js"></script>
+<script src="../lib/CSInterface.js"></script>
+<script src="../lib/AgoraLib.js"></script>
+<script src="../lib/Vulcan.js"></script>
+<script src="../lib/bootstrap-dialog.min.js"></script>
+<script src="../lib/main.js"></script>
+<title>Tappecue</title>
 </head>
 <body id="index_body">
- <div class="panel panel-default">
-    <div class="panel-heading panel-heading-sm">
-      <a data-toggle="collapse" href="#connectaem">Log in to Tappecue</a>
-    </div>
+<div class="panel panel-default">
+    <div class="panel-heading panel-heading-sm"> <a data-toggle="collapse" href="#connectaem">Log in to Tappecue</a> </div>
     <div id="connectaem" class="panel-collapse collapse in">
-      <div class="panel-body">
-        <div class="form-group">
-          <label for="url_lbl"><i class="fa fa-server" aria-hidden="true"></i>Username:</label>
-          <input type="text" class="form-control" id="username" placeholder="Enter your Teppecue username">
-          <label for="url_lbl"><i class="fa fa-server" aria-hidden="true"></i>Password:</label>
-          <input type="password" class="form-control" id="pw" placeholder="Enter your Teppecue password">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="url_lbl2"><em class="fa fa-server" aria-hidden="true"></em>Username:</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter your Teppecue username">
+                <label for="url_lbl"><i class="fa fa-server" aria-hidden="true"></i>Password:</label>
+                <input type="password" class="form-control" id="pw" placeholder="Enter your Teppecue password">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" id="loginBtn">Log in</button>
+                <button type="button" class="btn btn-default" onclick="signout()">Sign Out</button>
+                Your token:<span id="X-Auth-Header"></span></div>
         </div>
-        <div class="form-group">
-          <button type="button" class="btn btn-default" id="loginBtn">Log in</button>
-          <button type="button" class="btn btn-default" onclick="signout()">Sign Out</button>
-          </div> Your token:<span id="X-Auth-Header"></span>
-      </div>
     </div>
-  </div>
-  <div class="panel panel-default">
-      <div id="userGreeting" class="panel-heading panel-heading-sm">
-          <p>Login to see your Tappecue temperatures.</p>
-      </div>
+</div>
+<div class="panel panel-default">
+    <div id="userGreeting" class="panel-heading panel-heading-sm">
+        <p>Login to see your Tappecue temperatures.</p>
+    </div>
     <div class="panel-body">
         <p>Your temperature data will be here once you login.</p>
     </div>
-    <div class="panel-footer panel-footer-sm">
-            MMM. BBQ.
-          </div>
-  </div>
+    <div class="panel-footer panel-footer-sm"> MMM. BBQ. </div>
+</div>
 </body>
 </html>
