Working cross-app token read/write to allow opening of panel in multiple apps.

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="panel panel-success">
     <div id="sessionMessage" class="panel-heading panel-heading-sm panel-success" data-toggle="collapse" href="#sessionselect">Login to see your Tappecue session</div>
-    <div id="sessionselect" class="panel-body panel-collapse collapse">
+    <div id="sessionselect" class="panel-body panel-collapse collapse" display="none">
         <div class="row ui-scale">
             <div class="btn btn-success col-xs-6 probe" id="probe1">
                 <h4>Probe 1</h4>
@@ -65,6 +65,12 @@
             </div>
         </div>
     </div>
+    <div id="extensionInfo" class="panel-body">
+    <h3>Track your cook while you work!</h3>
+    <p>Tappecue is a wireless, Internet connected thermometer. This panel displays your cook data, so you can stop checking your phone and keep you focus on your work. Simply start your cook with your Tappecue app on your device, then log in here. Your current cook data will display here while you're logged in.</p>
+    <p>We hope you like it! 
+</div>
+
 </div>
 <div class="navbar navbar-inverse navbar-fixed-bottom"><span class="navbar-brand">MMM. BBQ. <span id="timezone"></span></span></div>
 </body>
