--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
 </head>
 <body id="index_body">
 <div class="panel panel-primary">
-    <div class="panel-heading panel-heading-sm" data-toggle="collapse" href="#connect"><img src="../img/tappecue.png" alt="Tappecue Logo" width="40"> <span id="loginmessage">Log in to Tappecue</span></div>
+    <div id="connectHeader" class="panel-heading panel-heading-sm" data-toggle="collapse" href="#connect"><img src="../img/tappecue.png" alt="Tappecue Logo" width="40"> <span id="loginmessage">Log in to Tappecue</span></div>
     <div id="connect" class="panel-collapse collapse in">
         <div class="panel-body">
             <div class="form-group">
