--- a/html/index.html
+++ b/html/index.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <div class="panel panel-success smokePanel">
-    <div id="sessionMessage" class="panel-heading panel-heading-sm panel-success" data-toggle="collapse" href="#sessionselect">Login to see your Tappecue session</div>
+    <div id="sessionMessage" class="panel-heading panel-heading-sm panel-success" href="#sessionselect">Login to see your Tappecue session</div>
     <div id="sessionselect" class="panel-body panel-collapse collapse" display="none">
         <div class="row">
             <div class="col-xs-6 probe probe-warning" id="probe1">
