Update for 8 probes

--- a/html/index.html
+++ b/html/index.html
@@ -94,6 +94,34 @@
                 <p align="center" id="probe4Target" class="probeTarget">Target range: 225 - 275</p>
             </div>
         </div>
+		<div class="row extendedProbes">
+            <div class="col-xs-6 probe probe-danger" id="probe5">
+                <h4 align="center" class="probeNumber">Probe 5</h4>
+                <h4 align="center" id="probe5Name" class="probeName">Brisket (chamber)</h4>
+                <h2 align="center" id="probe5Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <p align="center" id="probe5Target" class="probeTarget">Target range: 225 - 275</p>
+            </div>
+            <div class="col-xs-6 probe probe-inactive" id="probe6">
+                <h4 align="center" class="probeNumber">Probe 6</h4>
+                <h4 align="center" id="probe6Name" class="probeName">Brisket (chamber)</h4>
+                <h2 align="center" id="probe6Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <p align="center" id="probe6Target" class="probeTarget">Target range: 225 - 275</p>
+            </div>
+        </div>
+		<div class="row extendedProbes">
+            <div class="col-xs-6 probe probe-danger" id="probe7">
+                <h4 align="center" class="probeNumber">Probe 7</h4>
+                <h4 align="center" id="probe7Name" class="probeName">Brisket (chamber)</h4>
+                <h2 align="center" id="probe7Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <p align="center" id="probe7Target" class="probeTarget">Target range: 225 - 275</p>
+            </div>
+            <div class="col-xs-6 probe probe-inactive" id="probe8">
+                <h4 align="center" class="probeNumber">Probe 8</h4>
+                <h4 align="center" id="probe8Name" class="probeName">Brisket (chamber)</h4>
+                <h2 align="center" id="probe8Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <p align="center" id="probe8Target" class="probeTarget">Target range: 225 - 275</p>
+            </div>
+        </div>
     </div>
     <div id="extensionInfo" class="panel-body">
         <h3>Track your cook while you work!</h3>
