--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,8 @@
 <script>if (typeof exports === 'object') {window.exports = exports; exports = undefined;}</script>
 <script src="../lib/jquery-3.2.1.min.js"></script>
 <script src="../lib/CSInterface.js"></script>
+<script>if (window.module) module = window.module;</script>
+<script>if (window.exports) exports = window.exports;</script>
 <script src="../lib/AgoraLib.js"></script>
 <script src="../lib/Vulcan.js"></script>
 <script src="../lib/bootstrap.min.js"></script>
@@ -20,6 +22,7 @@
 <script src="../lib/bootstrap-switch.min.js"></script>
 <script src="../lib/bootstrap-select.min.js"></script>
 <script src="../lib/moment.min.js"></script>
+
 <script src="../lib/main.js"></script>
 <title>Tappecue</title>
 </head>
