--- a/html/index - Copy.html
+++ b/html/index - Copy.html
@@ -28,7 +28,7 @@
 </head>
 <body id="index_body">
 <div class="panel panel-primary">
-    <div id="connectHeader" class="panel-heading panel-heading-sm" data-toggle="collapse" href="#connect"><img src="../img/tappecue.png" alt="Tappecue Logo" width="40"> <span id="loginmessage">Log in<span class="targetRange"> to Tappecue</span></span></div>
+    <div id="connectHeader" class="panel-heading panel-heading-sm" data-toggle="collapse" href="#connect"><img src="../img/tappecue.png" alt="Tappecue Logo" width="40"> <span id="loginmessage">Log in to Tappecue</span></div>
     <div id="connect" class="panel-collapse collapse in">
         <div class="panel-body">
             <div class="form-group">
@@ -68,7 +68,7 @@
 </div>
 <div class="panel panel-success smokePanel">
     <div id="sessionMessage" class="panel-heading panel-heading-sm panel-success" href="#sessionselect">Login to see your Tappecue session</div>
-    <div id="sessionselect" class="panel-body panel-collapse collapse" display="none">
+    <div id="sessionselect" class="panel-body">
         <div class="row">
             <div class="col-xs-6 probe probe-warning" id="probe1">
                 <h4 align="center" class="probeNumber">Probe 1</h4>
