Added in the Tappecue Cruise Control
Added Cruise Control support.

--- a/html/index.html
+++ b/html/index.html
@@ -73,13 +73,13 @@
             <div class="col-xs-6 probe probe-warning" id="probe1">
                 <h4 align="center" class="probeNumber">Probe <span id="probe1Number">1</span></h4>
                 <h4 align="center" id="probe1Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe1Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe1Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe1Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
             <div class="col-xs-6 probe probe-ok" id="probe2">
                 <h4 align="center" class="probeNumber">Probe <span id="probe2Number">2</span></h4>
                 <h4 align="center" id="probe2Name" class="probeName">Brisket</h4>
-                <h2 align="center" id="probe2Temp" class="probeTemp">250 <img src="../img/meat.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe2Temp" class="probeTemp">250 <img src="../img/status_icons/meat.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe2Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
         </div>
@@ -87,13 +87,13 @@
             <div class="col-xs-6 probe probe-danger" id="probe3">
                 <h4 align="center" class="probeNumber">Probe <span id="probe3Number">3</span></h4>
                 <h4 align="center" id="probe3Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe3Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe3Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe3Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
             <div class="col-xs-6 probe probe-inactive" id="probe4">
                 <h4 align="center" class="probeNumber">Probe <span id="probe4Number">4</span></h4>
                 <h4 align="center" id="probe4Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe4Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe4Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe4Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
         </div>
@@ -101,13 +101,13 @@
             <div class="col-xs-6 probe probe-danger" id="probe5">
                 <h4 align="center" class="probeNumber">Probe <span id="probe5Number">5</span></h4>
                 <h4 align="center" id="probe5Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe5Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe5Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe5Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
             <div class="col-xs-6 probe probe-inactive" id="probe6">
                 <h4 align="center" class="probeNumber">Probe <span id="probe6Number">6</span></h4>
                 <h4 align="center" id="probe6Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe6Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe6Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe6Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
         </div>
@@ -115,13 +115,13 @@
             <div class="col-xs-6 probe probe-danger" id="probe7">
                 <h4 align="center" class="probeNumber">Probe <span id="probe7Number">7</span></h4>
                 <h4 align="center" id="probe7Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe7Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe7Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe7Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
             <div class="col-xs-6 probe probe-inactive" id="probe8">
                 <h4 align="center" class="probeNumber">Probe <span id="probe8Number">8</span></h4>
                 <h4 align="center" id="probe8Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe8Temp" class="probeTemp">250 <img src="../img/cooker.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h2 align="center" id="probe8Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe8Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
         </div>
