Added spinning fan.

--- a/html/index.html
+++ b/html/index.html
@@ -90,10 +90,10 @@
                 <h2 align="center" id="probe3Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
                 <p align="center" id="probe3Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
-            <div class="col-xs-6 probe probe-inactive" id="probe4">
+            <div class="col-xs-6 probe probe-fan" id="probe4">
                 <h4 align="center" class="probeNumber">Probe <span id="probe4Number">4</span></h4>
-                <h4 align="center" id="probe4Name" class="probeName">Brisket (chamber)</h4>
-                <h2 align="center" id="probe4Temp" class="probeTemp">250 <img src="../img/status_icons/chamber.png" class="smokeIcon" alt="Chamber Probe"/></h2>
+                <h4 align="center" id="probe4Name" class="probeName">Cruise Control Set Point</h4>
+                <h2 align="center" id="probe4Temp" class="probeTemp">250 <img src="../img/status_icons/fan_on.gif" class="smokeIcon" alt="Cruise Control"/></h2>
                 <p align="center" id="probe4Target" class="probeTarget">Target<span class="targetRange"> range</span>: 225 - 275</p>
             </div>
         </div>
@@ -128,7 +128,7 @@
     </div>
     <div id="extensionInfo" class="panel-body">
         <h3>Track your cook while you work!</h3>
-        <p><span class="externalURL" onclick="window.cep.util.openURLInDefaultBrowser('http://www.tappecue.com')"><b><u>Tappecue</u></b></span> is a wireless, Internet connected thermometer. This panel displays your cook data, so you can stop checking your phone and focus on your work. Simply start your cook with your Tappecue app on your device, then log in here. Your current cook data will display here while you're logged in.</p>
+        <p><span class="externalURL" onclick="window.cep.util.openURLInDefaultBrowser('http://www.tappecue.com')"><b><u>Tappecue</u></b></span> is a wireless, Internet connected thermometer. This panel displays your cook data, so you can stop checking your phone and focus on your work. Simply start your cook with your Tappecue app on your device, then log in here. Your current cook data will display here and in most of your Creative Cloud apps. Smokin'!</p>
         <p>We hope you like it!</p>
         <p class="panelCredits">This panel was made by <span class="externalURL" onclick="window.cep.util.openURLInDefaultBrowser('http://blogs.adobe.com/jlockman/')"><b><u>James Lockman</u></b></span>. He doesn't have any connection to Tappecue, but he is an enthusiastic Tappecue customer and Creative Cloud extensions tinkerer.</p>
     </div>
